--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>First Game with Phaser.js</title>
-    <link type="stylesheet" href="css/style.css">
+    <link type="text/css" rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <script src="js/phaser.min.js"></script>
