Added the basis for point scoring.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>First Game with Phaser.js</title>
+    <title>Phaser.js</title>
     <link type="text/css" rel="stylesheet" href="css/style.css">
   </head>
+  
   <body>
     <script src="js/phaser.min.js"></script>
     <script src="js/main.js"></script>
