Converted to modular system.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   
   <body>
     <script src="js/phaser.min.js"></script>
+    
+    <script src="js/boot.js"></script>
+    <script src="js/load.js"></script>
+    <script src="js/play.js"></script>
+    
     <script src="js/main.js"></script>
   </body>
 </html>
